--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div
           class="row align-items-stretch justify-content-start ml-sm-0 px-lg-5"
         >
-          <div class="col-lg-6 col-md-6 col-sm-11 px-sm-5 target">
+          <div class="col-lg-6 col-md-6 col-sm-11 px-sm-3 target">
             <h1 class="section-title">Mục tiêu nghề nghiệp</h1>
             <p>
               Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp
@@ -138,16 +138,16 @@
             <div class="row justify-content-evenly align-items-stretch m-lg-5" >
               <!-- Kinh nghiêm -->
               <!-- cột kinh nghiệm chia làm 3 cột  -->
-              <div class="job-info-item experiance col-lg-3 col-sm-10 m-sm-3" >
+              <div class="job-info-item experiance col-lg-3 col-sm-10 m-sm-3 col-10  my-3" >
                 <!-- có 2 hàng -->
                 <!-- job-info-tiltle: nội dung thông tin -->
                 <div class="row justify-content-start align-items-start">
                   <!--  job-info-tiltle: tên thông tin  -->
-                  <div class="col-lg-8 col-md-8 col-sm-8 job- info-tiltle">
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-8 job-info-tiltle">
                     <h1 class="section-title">Kinh nghiệm</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
-                  <div class="col-lg-4 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-4 job-info-icon">
                     <i class="ic-toolbox"></i>
                   </div>
                 </div>
@@ -184,13 +184,13 @@
                 </div>
               </div>
               <!-- Học vấn -->
-              <div class="job-info-item education col-lg-3 col-sm-10 m-sm-3">
+              <div class="job-info-item education col-lg-3 col-sm-10 m-sm-3 col-10  my-3">
                 <div class="row mb-lg-3">
-                  <div class="col-12 col-md-8 col-sm-8 job-info-tiltle">
+                  <div class="col-12 col-md-8 col-sm-8 col-8 job-info-tiltle">
                     <h1 class="section-title">Học vấn</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
-                  <div class="col-6 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-6 col-md-4 col-sm-4 col-4 job-info-icon">
                     <i class="ic-pencil"></i>
                   </div>
                 </div>
@@ -224,14 +224,14 @@
               </div>
               <!-- Hoạt động -->
               <div
-                class="job-info-item activity col-lg-3 p-lg-1 col-sm-10 m-sm-3"
+                class="job-info-item activity col-lg-3 p-lg-1 col-sm-10 m-sm-3 col-10  my-3"
               >
                 <div class="row mb-lg-3">
-                  <div class="col-lg-8 col-md-8 col-sm-8 job-info-tiltle">
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-8 job-info-tiltle">
                     <h1 class="section-title">Hoạt động</h1>
                   </div>
                   <!--  job-info-icon: icon thôn g tin  -->
-                  <div class="col-lg-4 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-lg-4 col-md-4 col-sm-4  col-4 job-info-icon">
                     <i class="ic-toolbox"></i>
                   </div>
                 </div>
@@ -263,53 +263,53 @@
             <div class="row justify-content-evenly align-items-stretch m-lg-5">
               <!-- sở thích -->
               <div
-                class="job-info-item hobby col-lg-3 m-lg-2 p-lg-2 col-sm-10 m-sm-3"
+                class="job-info-item hobby col-lg-3 m-lg-2 p-lg-2 col-sm-10 m-sm-3 col-10  my-3"
               >
                 <div class="row">
-                  <div class="col-lg-8 col-md-8 col-sm-8 job-info-tiltle">
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-7 job-info-tiltle">
                     <h1 class="section-title">Sở thích</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
-                  <div class="col-lg-4 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-4 job-info-icon">
                     <i class="ic-telescope"></i>
                   </div>
                 </div>
-                <div class="row">
+                <div class="row p-3">
                   <!-- job-info-content: nội dung thông tin -->
                   <div class="job-info-content">
-                    <div class="row px-sm-3 pt-sm-5">
-                      <div class="col-lg-3 col-sm-3">
+                    <div class="row px-sm-3 pt-sm-5 py-3 py-2">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <div class="center">
                           <i class="ic-strategy"></i>
                         </div>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <div class="center">
                           <i class="ic-strategy"></i>
                         </div>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <div class="center">
                           <i class="ic-hotairballoon"></i>
                         </div>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <div class="center">
                           <i class="ic-basket"></i>
                         </div>
                       </div>
                     </div>
-                    <div class="row px-sm-3 py-sm-2 align-items-center">
-                      <div class="col-lg-3 col-sm-3">
+                    <div class="row px-sm-3 py-sm-2 py-3 py-2 align-items-center">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <p>Âm nhạc</p>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <p>Game</p>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <p>Du lịch</p>
                       </div>
-                      <div class="col-lg-3 col-sm-3">
+                      <div class="col-lg-3 col-sm-3 col-3">
                         <p>Mua sắm</p>
                       </div>
                     </div>
@@ -318,14 +318,14 @@
               </div>
               <!-- Ngôn ngữ -->
               <div
-                class="job-info-item languges col-lg-3 m-lg-2 p-lg-2 col-sm-10 m-sm-3"
+                class="job-info-item languges col-lg-3 m-lg-2 p-lg-2 col-sm-10 m-sm-3 col-10  my-3"
               >
                 <div class="row mb-lg-3">
-                  <div class="col-lg-8 col-md-8 col-sm-8 job-info-tiltle">
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-8 job-info-tiltle">
                     <h1 class="section-title">Ngôn ngữ</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
-                  <div class="col-lg-4 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-4 job-info-icon">
                     <i class="ic-mic"></i>
                   </div>
                 </div>
@@ -345,14 +345,14 @@
               </div>
               <!-- Kỹ năng -->
               <div
-                class="job-info-item skill col-lg-3 m-lg-2 p-lg-2 col-sm-10 m-sm-3"
+                class="job-info-item skill col-lg-3 col-sm-10 col-10  my-3 m-lg-2 p-lg-2"
               >
                 <div class="row mb-lg-3">
-                  <div class="col-lg-8 col-md-8 col-sm-8 job-info-tiltle">
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-8 job-info-tiltle">
                     <h1 class="section-title">Kỹ năng</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
-                  <div class="col-lg-4 col-md-4 col-sm-4 job-info-icon">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-4 job-info-icon">
                     <i class="ic-tools-2"></i>
                   </div>
                 </div>
@@ -439,7 +439,7 @@
           class="row my-lg-4 align-items-stretch justify-content-center"
          
         >
-          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 project-item">
+          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 col-10  m-3 project-item">
             <a href="./digtal-cv.html" target="_blank">
               <div class="container-fuild">
                 <!-- Trong mỗi project item có 3 thành phần
@@ -453,7 +453,7 @@
                   <h3>CV CÁ NHÂN</h3>
                 </div>
                 <div class="row project-item-years align-items-center justify-content-center" data-masonry='{"percentPosition": true}'>
-                  <div class="col-lg-4 col-md-8 col-ms-4">
+                  <div class="col-lg-4 col-md-8 col-ms-4 ">
                     <div class="row">
                       <div class="col-md-8"><button>2021</button></div>
                     </div>
@@ -496,7 +496,7 @@
               </div>
             </a>  
           </div>
-          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 project-item">
+          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 col-10  m-3 project-item">
             <a href="./digtal-cv.html" target="_blank">
               <div class="container-fuild">
                 <!-- Trong mỗi project item có 3 thành phần
@@ -554,7 +554,7 @@
               </div>
             </a>
           </div>
-          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 project-item">
+          <div class="col-lg-3 col-md-3 col-sm-10 m-sm-3 col-10 m-3 project-item">
             <a href="./digtal-cv.html" target="_blank">
               <div class="container-fuild">
                 <!-- Trong mỗi project item có 3 thành phần
