--- a/index.html
+++ b/index.html
@@ -184,9 +184,12 @@
                 </div>
               </div>
               <!-- Học vấn -->
-              <div class="job-info-item education col-lg-3 col-sm-10 m-sm-3 col-10  my-3">
-                <div class="row mb-lg-3">
-                  <div class="col-12 col-md-8 col-sm-8 col-8 job-info-tiltle">
+              <div class="job-info-item education col-lg-3 p-lg-1 col-sm-10 m-sm-3 col-10  my-3" >
+                <!-- có 2 hàng -->
+                <!-- job-info-tiltle: nội dung thông tin -->
+                <div class="row">
+                  <!--  job-info-tiltle: tên thông tin  -->
+                  <div class="col-lg-8 col-md-8 col-sm-8 col-6 job-info-tiltle">
                     <h1 class="section-title">Học vấn</h1>
                   </div>
                   <!--  job-info-icon: icon thông tin  -->
@@ -455,7 +458,7 @@
                 <div class="row project-item-years align-items-center justify-content-center" data-masonry='{"percentPosition": true}'>
                   <div class="col-lg-4 col-md-8 col-ms-4 ">
                     <div class="row">
-                      <div class="col-md-8"><button>2021</button></div>
+                      <div class="col-md-8"><button><span>2021</span></button></div>
                     </div>
                   </div>
                  <div class="col-lg-8 col-md-12 col-ms-8">
@@ -512,7 +515,7 @@
                 <div class="row project-item-years align-items-center justify-content-center" data-masonry='{"percentPosition": true}'>
                   <div class="col-lg-4 col-md-8 col-ms-4">
                     <div class="row">
-                      <div class="col-md-8"><button>2021</button></div>
+                      <div class="col-md-8"><button><span>2021</span></button></div>
                     </div>
                   </div>
                  <div class="col-lg-8 col-md-12 col-ms-8">
@@ -570,7 +573,7 @@
                 <div class="row project-item-years align-items-center justify-content-center" data-masonry='{"percentPosition": true}'>
                   <div class="col-lg-4 col-md-8 col-ms-4">
                     <div class="row">
-                      <div class="col-md-8"><button>2021</button></div>
+                      <div class="col-md-8"><button><span>2021</span></button></div>
                     </div>
                   </div>
                  <div class="col-lg-8 col-md-12 col-ms-8">
